[package]
name = "mexset"
version = "0.1.0"
authors = ["PrototypeRailGun <52821033+PrototypeRailGun@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage="https://github.com/PrototypeRailGun/mexset"
repository="https://github.com/PrototypeRailGun/mexset"

[lib]
name = "mexset"
bench = false

[dependencies]
num = "0.4.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "benchmarks"
harness = false
